--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
         <a aria-label="Send email" href="David@redteaming.org"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/zhe-wang-2017"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>	
         <a aria-label="My Github" target="https://github.com/Cyb3rC3lt" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
