--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,12 +7,13 @@
       <div class="header-icons">
         <a aria-label="Send email" href="David@redteaming.org"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/zhe-wang-2017"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>	
-        <a aria-label="My Github" target="https://github.com/Cyb3rC3lt" href="icon fa fa-github"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/davidsprofile"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
+	<a href="https://www.github.com/Cyb3rC3lt"><i class="icon fa fa-github" aria-hidden="true"></i></a>
+   
       </div>
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
-        <a class="link" href="#projects" data-scroll>Projects</a>
+        <a class="link" href="#about" data-scroll>Whoami</a>
+        <a class="link" href="#projects" data-scroll>Posts</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
