--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" href="David@redteaming.org"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="https://www.reddit.com/user/Cyb3rC3lt"><i class="icon fa fa-reddit" aria-hidden="true"></i></a> 
         <a href="https://www.linkedin.com/in/davidsprofile"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
 	<a href="https://www.github.com/Cyb3rC3lt"><i class="icon fa fa-github" aria-hidden="true"></i></a>
    
