--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>Whoami</a>
-        <a class="link" href="#projects" data-scroll>Posts</a>
+        <a class="link" href="#projects" data-scroll>Ramblings</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
