--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <footer class="footer">
-    <p>&copy; {{site.username}}</p>
+  <p>
+    &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>
+    {%- if site.author -%}
+      &nbsp;<a href="{{ site.author.url }}" target="_blank">{{ site.author.name }}</a>
+    {%- endif -%}. All rights reserved.
+  </p>
 </footer>
-<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="{{ "/assets/js/sweet-scroll.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
-{% include google-analytics.html %}
+  
