--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,12 +3,12 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/crtp.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Title1 </h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="/home.html">Check it out</a>
+    <h3>Certified Red Team Professional (CRTP) Review</h3>
+    <p>My review of the CRTP labs and exam. I took this exam in late September 2022 and it was a fantastic experience using only Windows to attack Windows. Have a read if you are interested in using "Living off the land (LotL)" techniques.</p>
+    <a class="project-link" href="/blog/2021/12/01/crtp.html">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -16,8 +16,8 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Title </h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <h3>Certified Red Team Operator (CRTO) Review</h3>
+    <p>My review of the CRTO labs and exam</p>
+    <a class="project-link" href="/blog/2021/12/01/crto.html">Check it out</a>
   </div>
 </div>
