--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -15,7 +15,7 @@ h1, h2, h3, h4, stong {
     margin-top: 1em;
     padding-top: 1em;
     line-height: 1.25;
-    color: #D30000;
+    color: #555;
 }
 h1 {
     font-size: 2.5rem;
@@ -25,6 +25,7 @@ h2 {
 }
 h3 {
     font-size: 1.5rem;
+    color: #D30000;
 }
 h4 {
     font-size: 1rem;
