--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,21 +3,21 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="crtp" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" />
+    <img alt="crto" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3>Certified Red Team Professional (CRTO) Review</h3>
-    <p>My review of the CRTP labs and exam. I took this exam in late September 2022 and it was a fantastic experience using only Windows to attack Windows. Have a read if you are interested in using "Living off the land (LotL)" techniques.</p>
+    <h3>Certified Red Team Operator (CRTO) Review</h3>
+    <p>My review of the CRTO labs and exam.</p>
     <a class="project-link" href="/blog/2021/12/01/crto.html">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="crto" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="crtp" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3>Certified Red Team Operator (CRTP) Review</h3>
-    <p>My review of the CRTO labs and exam</p>
+    <h3>Certified Red Team Professional (CRTP) Review</h3>
+    <p>My review of the CRTP labs and exam. I took this exam in late September 2022 and it was a fantastic experience using only Windows to attack Windows. Have a read if you are interested in using "Living off the land (LotL)" techniques.</p>
     <a class="project-link" href="/blog/2021/12/01/crtp.html">Check it out</a>
   </div>
 </div>
