--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,7 +13,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="crtp" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" />
+    <img alt="crtp" src="{{ "/assets/img/crtp.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3>Certified Red Team Professional (CRTP) Review</h3>
