--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,9 +1,10 @@
 <div class="user-details">
   <h1> Ramblings </h1>
 </div>
+
 <div class="user-projects">
   <div class="images-right">
-    <img alt="crto" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" />
+    <img alt="crto" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3>Certified Red Team Operator (CRTO) Review</h3>
@@ -11,6 +12,8 @@
     <a class="project-link" href="/blog/2021/12/01/crto.html">Check it out</a>
   </div>
 </div>
+
+
 <div class="user-projects">
   <div class="images-left">
     <img alt="crtp" src="{{ "/assets/img/crtp.jpg" | prepend: site.baseurl }}" />
