--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -31,3 +31,9 @@
   text-align: center;
   margin: 5px auto;
 }
+
+.post-details {
+  text-align: left;
+  margin-left: 100px;
+  margin-right: 100px;
+}
