--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,10 +13,10 @@
 </div>
 
 
-<div class="user-projects">
-  <div class="contents-left">
+<div class="post-details">
+
     <p>{{ content }}</p>
-</div>
+
 </div>
 
 <br>
