--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -34,6 +34,11 @@
 
 .post-details {
   text-align: left;
-  margin-left: 50px;
-  margin-right: 50px;
+  width: 90%;
+  margin: 0 auto;
+  font-size: 14px;
+  max-width: 960px;
+  @media only screen and (min-width: $cut) {
+    width: 80%;
+  }
 }
