--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<div class="contents-center">
-<h1 align=center>{{ page.title }}</h1>
+<div class="post-details">
+<h1>{{ page.title }}</h1>
 </div>
 <p align=center>
 <u> {{ page.date | date_to_string }}</u>
