--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -46,3 +46,35 @@ h1 {
     width: 90%;
   }
 }
+
+.post-title {
+    font-size: 100%;
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    line-height: 1.5;
+    max-width: 960px;
+    color: #555;
+    font-family: "Montserrat",sans-serif;
+    @media only screen and (min-width: 550px){
+    width: 90%;
+  }
+}
+
+.my-link {
+  h3 {
+    font-size: 1.5rem;
+    color: #d30000;
+    margin-top: 1em;
+    padding-top: 1em;
+    line-height: 1.25;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    font-family: "Montserrat",sans-serif;
+    padding: 0;
+}
+}
