--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -56,25 +56,16 @@ h1 {
     max-width: 960px;
     color: #555;
     font-family: "Montserrat",sans-serif;
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 190px;
+    margin-inline-end: 10px;
+    font-weight: bold;
+
     @media only screen and (min-width: 550px){
     width: 90%;
   }
 }
 
-.my-link {
-  h3 {
-    font-size: 1.5rem;
-    color: #d30000;
-    margin-top: 1em;
-    padding-top: 1em;
-    line-height: 1.25;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    font-family: "Montserrat",sans-serif;
-    padding: 0;
-}
-}
