--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
 
 <br>
 <div class="post-details">
-<a href="/#{{ page.title }}">Back</a>
+<a class="project-link" href="/#{{ page.title }}">Back</a>
 </div>
 {% include footer.html %}
 </body>
