--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -48,7 +48,7 @@
   margin-top: 10em;
   width: 90%;
   margin: 0 auto;
-  font-size: 20px;
+  font-size: large;
   font-weight: bold;
   max-width: 960px;
   color: #D30000;
