--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="crto" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="crto" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 id="Certified Red Team Operator (CRTO) Review">Certified Red Team Operator (CRTO) Review</h3>
