--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,9 +13,20 @@
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-left">
+    <img alt="sektor7-ess" src="{{ "/assets/img/malware-essentials.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3 id="Sektor7 Malware Development Course Review">Sektor7 Malware Development Course Review</h3>
+    <p>My review of the Sektor7 Malware Development Course.</p>
+    <a class="project-link" href="/blog/2022/12/09/sektor7-ess.html">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
     <img alt="crtp" src="{{ "/assets/img/crtp.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
