--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -24,10 +24,9 @@
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
-    <img alt="crtp" src="{{ "/assets/img/crtp.jpg" | prepend: site.baseurl }}" />
+    <img alt="crtp" src="{{ "/assets/img/oscp.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3 id="Certified Red Team Professional (CRTP) Review">Certified Red Team Professional (CRTP) Review</h3>
@@ -35,3 +34,15 @@
     <a class="project-link" href="/blog/2022/12/09/crtp.html">Check it out</a>
   </div>
 </div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="crtp" src="{{ "/assets/img/oscp.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-left">
+    <h3 id="Offensive Security Certified Professional (OSCP) Review">Offensive Security Certified Professional (OSCP) Review</h3>
+    <p>My review of the OSCP labs and exam. I took this exam in late September 2022.</p>
+    <a class="project-link" href="/blog/2022/12/09/oscp.html">Check it out</a>
+  </div>
+</div>
+
