--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,7 +26,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="crtp" src="{{ "/assets/img/oscp.jpg" | prepend: site.baseurl }}" />
+    <img alt="crtp" src="{{ "/assets/img/crtp.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3 id="Certified Red Team Professional (CRTP) Review">Certified Red Team Professional (CRTP) Review</h3>
