--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -30,7 +30,7 @@
   </div>
   <div class="contents-right">
     <h3 id="Certified Red Team Professional (CRTP) Review">Certified Red Team Professional (CRTP) Review</h3>
-    <p>My review of the CRTP labs and exam. I took this exam in late September 2022 and it was a fantastic experience using only Windows to attack Windows. Have a read if you are interested in using "Living off the land (LotL)" techniques.</p>
+    <p>My review of the CRTP labs and exam. I took this exam in November 2022 and it was a fantastic experience using only Windows to attack Windows. Have a read if you are interested in using "Living off the land (LotL)" techniques.</p>
     <a class="project-link" href="/blog/2022/12/09/crtp.html">Check it out</a>
   </div>
 </div>
