--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -41,6 +41,13 @@
   @media only screen and (min-width: $cut) {
     width: 90%;
   }
+img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    @media only screen and (min-width: $cut) {
+      float: center;
+  }
 }
 
 .post-title {
