--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -64,5 +64,11 @@ img {
   @media only screen and (min-width: $cut) {
     width: 90%;
   }
+
+box {
+    inline-size: 150px;
+    overflow-wrap: break-word;
 }
+}
+
 
