--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -54,6 +54,14 @@ img {
   box {
   inline-size: 150px;
   overflow-wrap: anywhere;
+  padding: 15px;
+  margin-bottom: 0;
+  font-size: 14px;
+  white-space: pre-wrap;
+
+  .highlight pre{
+  white-space: pre-wrap;
+  }
   }
 }
 
