--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-    <p>Copyright &copy; <a href="/"
-   style="text-decoration: none">{{site.username}}</a> 2022</p>
+    <p><a href="/"
+   style="text-decoration: none">Copyright &copy; 2022 {{site.username}}</a></p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="{{ "/assets/js/sweet-scroll.min.js" | prepend: site.baseurl }}"></script>
