--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,10 +4,10 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="crto" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" />
+    <a class="plain-link" href="crto.html"><img alt="crto" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-left">
-    <h3 id="Certified Red Team Operator (CRTO) Review">Certified Red Team Operator (CRTO) Review</h3>
+    <h3 id="Certified Red Team Operator (CRTO) Review"><a class="plain-link" href="crto.html">Certified Red Team Operator (CRTO) Review</a></h3>
     <p>My review of the CRTO labs and exam.</p>
     <a class="project-link" href="crto.html">Check it out</a>
   </div>
@@ -15,10 +15,10 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="sektor7-ess" src="{{ "/assets/img/malware-essentials.png" | prepend: site.baseurl }}" />
+    <a class="plain-link" href="sektor7-ess.html"><img alt="sektor7-ess" src="{{ "/assets/img/malware-essentials.png" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-right">
-    <h3 id="Sektor7 Malware Development Essentials Review">Sektor7 Malware Development Essentials Review</h3>
+    <h3 id="Sektor7 Malware Development Essentials Review"><a class="plain-link" href="sektor7-ess.html">Sektor7 Malware Development Essentials Review</a></h3>
     <p>My review of the Sektor7 Malware Development Essentials Course.</p>
     <a class="project-link" href="sektor7-ess.html">Check it out</a>
   </div>
@@ -26,10 +26,10 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="crtp" src="{{ "/assets/img/crtp.jpg" | prepend: site.baseurl }}" />
+    <a class="plain-link" href="crtp.html"><img alt="crtp" src="{{ "/assets/img/crtp.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-left">
-    <h3 id="Certified Red Team Professional (CRTP) Review">Certified Red Team Professional (CRTP) Review</h3>
+    <h3 id="Certified Red Team Professional (CRTP) Review"><a class="plain-link" href="crtp.html">Certified Red Team Professional (CRTP) Review</a></h3>
     <p>My review of the CRTP labs and exam. I took this exam in November 2022 and it was a fantastic experience using only Windows to attack Windows. Have a read if you are interested in using "Living off the land (LotL)" techniques.</p>
     <a class="project-link" href="crtp.html">Check it out</a>
   </div>
@@ -37,10 +37,10 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="crtp" src="{{ "/assets/img/oscp.jpg" | prepend: site.baseurl }}" />
+    <a class="plain-link" href="oscp.html"><img alt="oscp" src="{{ "/assets/img/oscp.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-right">
-    <h3 id="Offensive Security Certified Professional (OSCP) Review">Offensive Security Certified Professional (OSCP) Review</h3>
+    <h3 id="Offensive Security Certified Professional (OSCP) Review"><a class="plain-link" href="oscp.html">Offensive Security Certified Professional (OSCP) Review</a></h3>
     <p>My review of the OSCP labs and exam. I took this exam in late September 2022.</p>
     <a class="project-link" href="oscp.html">Check it out</a>
   </div>
