--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
   </div>
   <div class="contents-left">
     <h3 id="Certified Red Team Operator (CRTO) Review"><a class="plain-link" href="crto.html">Certified Red Team Operator (CRTO) Review</a></h3>
-    <p>My review of the CRTO labs and exam.</p>
+    <p>TBD. Placing this here to force myself to complete it!</p>
     <a class="project-link" href="crto.html">Check it out</a>
   </div>
 </div>
