--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
   </div>
   <div class="contents-left">
     <h3 id="Certified Red Team Operator (CRTO) Review"><a class="plain-link" href="crto.html">Certified Red Team Operator (CRTO) Review</a></h3>
-    <p>TBD. Placing this here to force myself to complete it!</p>
+    <p>I passed this excellent course in April 2023. If you like the idea of using Cobalt Strike have a read.</p>
     <a class="project-link" href="crto.html">Check it out</a>
   </div>
 </div>
@@ -30,7 +30,7 @@
   </div>
   <div class="contents-left">
     <h3 id="Certified Red Team Professional (CRTP) Review"><a class="plain-link" href="crtp.html">Certified Red Team Professional (CRTP) Review</a></h3>
-    <p>My review of the CRTP labs and exam. I took this exam in November 2022 and it was a fantastic experience using only Windows to attack Windows. Have a read if you are interested in using "Living off the land (LotL)" techniques.</p>
+    <p>My review of the CRTP labs and exam. I took this exam in November 2022 and it was a fantastic experience using only Windows to attack Windows</p>
     <a class="project-link" href="crtp.html">Check it out</a>
   </div>
 </div>
