--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,13 +3,24 @@
 </div>
 
 <div class="user-projects">
-  <div class="images-right">
+  <div class="images-left">
     <a class="plain-link" href="crto.html"><img alt="crto" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" /></a>
   </div>
-  <div class="contents-left">
+  <div class="contents-right">
     <h3 id="Certified Red Team Operator (CRTO) Review"><a class="plain-link" href="crto.html">Certified Red Team Operator (CRTO) Review</a></h3>
     <p>I passed this excellent course in April 2023. If you like the idea of using Cobalt Strike have a read.</p>
     <a class="project-link" href="crto.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <a class="plain-link" href="adcs.html"><img alt="adcs" src="{{ "/assets/img/adcslogo.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-left">
+    <h3 id="Abusing ADCS ESC8"><a class="plain-link" href="adcs.html">Abusing ADCS ESC8</a></h3>
+    <p>I passed this excellent course in April 2023. If you like the idea of using Cobalt Strike have a read.</p>
+    <a class="project-link" href="adcs.html">Check it out</a>
   </div>
 </div>
 
