--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -19,7 +19,7 @@
   </div>
   <div class="contents-left">
     <h3 id="Abusing ADCS ESC8"><a class="plain-link" href="adcs.html">Abusing ADCS ESC8</a></h3>
-    <p>I passed this excellent course in April 2023. If you like the idea of using Cobalt Strike have a read.</p>
+    <p>Here is the story of my first internal pentest where I got DA abusing ESC8.</p>
     <a class="project-link" href="adcs.html">Check it out</a>
   </div>
 </div>
