--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,17 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-right">
+    <a class="plain-link" href="cme.html"><img alt="cme" src="{{ "/assets/img/cme.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-left">
+    <h3 id="Becoming a CrackMapExec Developer"><a class="plain-link" href="cme.html">Becoming a CrackMapExec Developer</a></h3>
+    <p>Some thoughts on my little foray into the world of CrackMapExec Python development.</p>
+    <a class="project-link" href="adcs.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-left">
     <a class="plain-link" href="crto.html"><img alt="crto" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" /></a>
   </div>
