--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
   <div class="contents-left">
     <h3 id="Becoming a CrackMapExec Developer"><a class="plain-link" href="cme.html">Becoming a CrackMapExec Developer</a></h3>
     <p>Some thoughts on my little foray into the world of CrackMapExec Python development.</p>
-    <a class="project-link" href="adcs.html">Check it out</a>
+    <a class="project-link" href="cme.html">Check it out</a>
   </div>
 </div>
 
