--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <a class="plain-link" href="cme.html"><img alt="cme" src="{{ "/assets/img/crto.jpg" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="cme.html"><img alt="cme" src="{{ "/assets/img/cme.png" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-left">
     <h3 id="Becoming a CrackMapExec Developer"><a class="plain-link" href="cme.html">Becoming a CrackMapExec Developer</a></h3>
