--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -8,7 +8,7 @@ body {
     color: #555;
     font-family: 'Montserrat', sans-serif;
 }
-article, aside, figcaption, figure, footer, header, nav, section {
+article, aside, figcaption, figure, footer, header, postheader, nav, section {
     display: block;
 }
 h1, h2, h3, h4, stong {
