--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
+{% include postheader.html %}
 
 <div class="post-title">
 {{ page.title }}
