--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -36,6 +36,13 @@
     width: 48%;
   }
 }
+.contents-right {
+  @media only screen and (min-width: $cut) {
+    float: right;
+    margin-top: -5%;
+    width: 48%;
+  }
+}
 .images-right {
   @media only screen and (min-width: $cut) {
     float: right;
@@ -97,5 +104,4 @@
 
   text-decoration: none;
   color: #d30000;
-
 }
