--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,18 @@
   <h1> Ramblings </h1>
 </div>
 
+
+<div class="user-projects">
+  <div class="images-left">
+    <a class="plain-link" href="crto.html"><img alt="crto" src="{{ "/assets/img/AzureLogo.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-right">
+    <h3 id="Azure Scoping Overview"><a class="plain-link" href="azurescoping.html">Azure Scoping Overview</a></h3>
+    <p>I recently had to figure out what type of creds and infrastructure I required for a Pentest. Here are my thoughts on Azure scoping.</p>
+    <a class="project-link" href="azurescoping.html">Check it out</a>
+  </div>
+</div>
+
 <div class="user-projects">
   <div class="images-right">
     <a class="plain-link" href="cme.html"><img alt="cme" src="{{ "/assets/img/cme.png" | prepend: site.baseurl }}" /></a>
