--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <a class="plain-link" href="crto.html"><img alt="crto" src="{{ "/assets/img/AzureLogo.jpg" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="azurescoping.html"><img alt="azurescoping" src="{{ "/assets/img/AzureLogo.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-right">
     <h3 id="Azure Scoping Overview"><a class="plain-link" href="azurescoping.html">Azure Scoping Overview</a></h3>
