--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
   </div>
   <div class="contents-right">
     <h3 id="Azure Scoping Overview"><a class="plain-link" href="azurescoping.html">Azure Scoping Overview</a></h3>
-    <p>I recently had to figure out what type of creds and infrastructure I required for a Pentest. Here are my thoughts on Azure scoping.</p>
+    <p>I recently had to figure out what type of creds and infrastructure I required for an Azure Pentest. Here are my thoughts on Azure scoping.</p>
     <a class="project-link" href="azurescoping.html">Check it out</a>
   </div>
 </div>
