--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </h1>
       <div class="header-icons">
         <a href="mailto:David Kennedy<David@redteaming.org>"><i class="icon fa fa-envelope" aria-hidden="true"></i></a> 
-        <a href="https://www.twitter.com/Cyb3rCelt"><i class="icon fa fa-twitter" aria-hidden="true"></i></a> 
+        <a href="https://www.twitter.com/Cyb3rC3lt"><i class="icon fa fa-twitter" aria-hidden="true"></i></a> 
         <a href="https://www.linkedin.com/in/davidsprofile"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
 	<a href="https://www.github.com/Cyb3rC3lt"><i class="icon fa fa-github" aria-hidden="true"></i></a>
    
