--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,10 +4,10 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <a class="plain-link" href="cobaltscripts.html"><img alt="cme" src="{{ "/assets/img/CS-LOGO.png" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="cobaltscripts.html"><img alt="cme" src="{{ "/assets/img/CS-LOGO.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-left">
-    <h3 id="Cobalt Strike Aggressor Script"><a class="plain-link" href="cme.html">Cobalt Strike Aggressor Script</a></h3>
+    <h3 id="Cobalt Strike Aggressor Script"><a class="plain-link" href="cobaltscripts.html">Cobalt Strike Aggressor Script</a></h3>
     <p>A simple Cobalt Strike Aggressor script I developed to email you when a beacon checks in.</p>
     <a class="project-link" href="cobaltscripts.html">Check it out</a>
   </div>
