--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
   </div>
   <div class="contents-left">
     <h3 id="Cobalt Strike Aggressor Script"><a class="plain-link" href="cobaltscripts.html">Cobalt Strike Aggressor Script</a></h3>
-    <p>A simple Cobalt Strike Aggressor script I developed to email me when a beacon checks in.</p>
+    <p>A simple Cobalt Strike aggressor script I developed to email me when a beacon checks in.</p>
     <a class="project-link" href="cobaltscripts.html">Check it out</a>
   </div>
 </div>
