--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,17 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-left">
+    <a class="plain-link" href="ntlmrelayxproxy.html"><img alt="ntlmrelayxproxy" src="{{ "/assets/img/ntlmrelayxproxy.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-right">
+    <h3 id="Azure Scoping Overview"><a class="plain-link" href="ntlmrelayxproxy.html">RBCD on a Local Machine via Socks Proxy</a></h3>
+    <p>A nice little LPE trick to easily get RBCD access on a compromised machine</p>
+    <a class="project-link" href="ntlmrelayxproxy.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-right">
     <a class="plain-link" href="cobaltscripts.html"><img alt="cme" src="{{ "/assets/img/CS-LOGO.jpg" | prepend: site.baseurl }}" /></a>
   </div>
