--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,7 +7,7 @@
     <a class="plain-link" href="ntlmrelayxproxy.html"><img alt="ntlmrelayxproxy" src="{{ "/assets/img/ntlmrelayxproxy.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-right">
-    <h3 id="Azure Scoping Overview"><a class="plain-link" href="ntlmrelayxproxy.html">RBCD on a Local Machine via Socks Proxy</a></h3>
+    <h3 id="RBCD on a Local Machine via Socks Proxy"><a class="plain-link" href="ntlmrelayxproxy.html">RBCD on a Local Machine via Socks Proxy</a></h3>
     <p>A nice little LPE trick to easily get RBCD access on a compromised machine</p>
     <a class="project-link" href="ntlmrelayxproxy.html">Check it out</a>
   </div>
