--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
   </div>
   <div class="contents-right">
     <h3 id="RBCD on a Local Machine via Socks Proxy"><a class="plain-link" href="ntlmrelayxproxy.html">RBCD on a Local Machine via Socks Proxy</a></h3>
-    <p>A nice little LPE trick to easily get RBCD access on a compromised machine</p>
+    <p>A nice little LPE trick to easily get RBCD access on a compromised machine running webdav.</p>
     <a class="project-link" href="ntlmrelayxproxy.html">Check it out</a>
   </div>
 </div>
