--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,17 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-right">
+    <a class="plain-link" href="sliverbof.html"><img alt="cme" src="{{ "/assets/img/sliver.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-left">
+    <h3 id="Sliver BOF"><a class="plain-link" href="cobaltscripts.html">Sliver Beacon Object File</a></h3>
+    <p>Adding a new Sliver BOF into the Sliver Armory and my experiences working with the Sliver C2 Framework</p>
+    <a class="project-link" href="sliverbof.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-left">
     <a class="plain-link" href="ntlmrelayxproxy.html"><img alt="ntlmrelayxproxy" src="{{ "/assets/img/Result.JPG" | prepend: site.baseurl }}" /></a>
   </div>
