--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -15,7 +15,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <a class="plain-link" href="ntlmrelayxproxy.html"><img alt="ntlmrelayxproxy" src="{{ "/assets/img/Result.JPG" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="ntlmrelayxproxy.html"><img alt="ntlmrelayxproxy" src="{{ "/assets/img/rbcd.png" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-right">
     <h3 id="RBCD on a Local Machine via Socks Proxy"><a class="plain-link" href="ntlmrelayxproxy.html">RBCD on a Local Machine via Socks Proxy</a></h3>
