--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,17 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-left">
+    <a class="plain-link" href="offensivenim.html"><img alt="nim" src="{{ "/assets/img/nim.png" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-right">
+    <h3 id="Offensive Nim"><a class="plain-link" href="offensivenim.html">Offensive Nim</a></h3>
+    <p>Here is some detailed information on my time spent building shellcode runners in the Nim programming language.</p>
+    <a class="project-link" href="offensivenim.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-right">
     <a class="plain-link" href="sliverbof.html"><img alt="cme" src="{{ "/assets/img/sliver.jpg" | prepend: site.baseurl }}" /></a>
   </div>
