--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,17 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-right">
+    <a class="plain-link" href="cftunnels.html"><img alt="cme" src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-left">
+    <h3 id="Cloudflare Tunnels"><a class="plain-link" href="cftunnels.html">Cloudflare Tunneling</a></h3>
+    <p>Playing around with Cloudflare's tunnelling capabilites as well as checking out how it could be used for C2 infrastructure</p>
+    <a class="project-link" href="cftunnels.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-left">
     <a class="plain-link" href="offensivenim.html"><img alt="nim" src="{{ "/assets/img/nim.png" | prepend: site.baseurl }}" /></a>
   </div>
