--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,12 +3,23 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-left">
+    <a class="plain-link" href="c2cloudflare.html"><img alt="cf" src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-right">
+    <h3 id="Cloudflare C2"><a class="plain-link" href="c2cloudflare.html">Putting The C2 In C2loudflare</a></h3>
+    <p>How to bring up an entire C2 infrastructure with all of your tooling and their corresponding redirectors within 5 minutes.</p>
+    <a class="project-link" href="c2cloudflare.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-right">
-    <a class="plain-link" href="cftunnels.html"><img alt="cme" src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="cftunnels.html"><img alt="cf" src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-left">
     <h3 id="Cloudflare Tunnels"><a class="plain-link" href="cftunnels.html">Cloudflare Tunneling</a></h3>
-    <p>Playing around with Cloudflare's tunnelling capabilites as well as checking out how it could be used for C2 infrastructure</p>
+    <p>Playing around with Cloudflare's tunnelling capabilites as well as checking out how it could be used for C2 infrastructure.</p>
     <a class="project-link" href="cftunnels.html">Check it out</a>
   </div>
 </div>
@@ -30,7 +41,7 @@
   </div>
   <div class="contents-left">
     <h3 id="Sliver BOF"><a class="plain-link" href="sliverbof.html">Sliver Beacon Object File</a></h3>
-    <p>Adding a new Sliver BOF into the Sliver Armory and my experiences working with the Sliver C2 Framework</p>
+    <p>Adding a new Sliver BOF into the Sliver Armory and my experiences working with the Sliver C2 Framework.</p>
     <a class="project-link" href="sliverbof.html">Check it out</a>
   </div>
 </div>
