--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,13 +7,9 @@
 {{ page.title }}
 </div>
 
-<p align=center>
-<u> {{ page.date | date_to_string }}</u>
-</p>
-
-
 <div class="post-details">
-
+     
+    <u><span style="font-size: 12px;">{{ page.date | date_to_string }}</span></u>
     <p>{{ content }}</p>
 
 </div>
