--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,17 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-right">
+    <a class="plain-link" href="ntlmrelay.html"><img alt="cf" src="{{ "/assets/img/ntlmrelay.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-left">
+    <h3 id="NTLM Relaying"><a class="plain-link" href="ntlmrelay.html">NTLM Relaying: Making the old new again</a></h3>
+    <p>Highlighting some of the older NTLM relaying based techniques which are still very effective in real world engagements.</p>
+    <a class="project-link" href="ntlmrelay.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-left">
     <a class="plain-link" href="c2cloudflare.html"><img alt="cf" src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
   </div>
