--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,17 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-left">
+    <a class="plain-link" href="bsides2024.html"><img alt="cf" src="{{ "/assets/img/BSidesLogo.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-right">
+    <h3 id="BSides London 2024"><a class="plain-link" href="bsides2024.html">Presenting at BSides London 2024</a></h3>
+    <p>Presenting my talk named "Bring Your Own Tusted Binary" on the main stage at BSides London 2024</p>
+    <a class="project-link" href="bsides2024.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-right">
     <a class="plain-link" href="ntlmrelay.html"><img alt="cf" src="{{ "/assets/img/ntlmrelay.jpg" | prepend: site.baseurl }}" /></a>
   </div>
