--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <a class="plain-link" href="bsides2024.html"><img alt="cf" src="{{ "/assets/img/BSidesLogo.jpg" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="bsides2024.html"><img alt="cf" src="{{ "/assets/img/BSidesLogo.jpeg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-right">
     <h3 id="BSides London 2024"><a class="plain-link" href="bsides2024.html">Presenting at BSides London 2024</a></h3>
