--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,22 +3,33 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-right">
+    <a class="plain-link" href="byotb.html"><img src="{{ "/assets/img/BSidesIntro.jpg" | prepend: site.baseurl }}" /></a>
+  </div>
+  <div class="contents-left">
+    <h3 id="Bring Your Own Trusted Binary (BYOTB)"><a class="plain-link" href="byotb.html">Bring Your Own Trusted Binary (BYOTB)</a></h3>
+    <p>Blogpost in regards my BSides London talk discussing bringing trusted binaries to a system and using them in an adversarial fashion.</p>
+    <a class="project-link" href="byotb.html">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-left">
-    <a class="plain-link" href="bsides2024.html"><img alt="cf" src="{{ "/assets/img/BSidesLogo.jpeg" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="bsides2024.html"><img src="{{ "/assets/img/BSidesLogo.jpeg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-right">
-    <h3 id="BSides London 2024"><a class="plain-link" href="bsides2024.html">Presenting at BSides London 2024</a></h3>
-    <p>Presenting my talk named "Bring Your Own Tusted Binary" on the main stage at BSides London 2024</p>
+    <h3 id="Presenting at BSides London 2024"><a class="plain-link" href="bsides2024.html">Presenting at BSides London 2024</a></h3>
+    <p>The slides and video from my talk named "Bring Your Own Tusted Binary" on the main stage at BSides London 2024.</p>
     <a class="project-link" href="bsides2024.html">Check it out</a>
   </div>
 </div>
 
 <div class="user-projects">
   <div class="images-right">
-    <a class="plain-link" href="ntlmrelay.html"><img alt="cf" src="{{ "/assets/img/ntlmrelay.jpg" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="ntlmrelay.html"><img src="{{ "/assets/img/ntlmrelay.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-left">
-    <h3 id="NTLM Relaying"><a class="plain-link" href="ntlmrelay.html">NTLM Relaying: Making the old new again</a></h3>
+    <h3 id="NTLM Relaying: Making the old new again"><a class="plain-link" href="ntlmrelay.html">NTLM Relaying: Making the old new again</a></h3>
     <p>Highlighting some of the older NTLM relaying based techniques which are still very effective in real world engagements.</p>
     <a class="project-link" href="ntlmrelay.html">Check it out</a>
   </div>
@@ -26,10 +37,10 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <a class="plain-link" href="c2cloudflare.html"><img alt="cf" src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="c2cloudflare.html"><img src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-right">
-    <h3 id="Cloudflare C2"><a class="plain-link" href="c2cloudflare.html">Putting The C2 In C2loudflare</a></h3>
+    <h3 id="Putting the C2 in C2loudflare"><a class="plain-link" href="c2cloudflare.html">Putting The C2 In C2loudflare</a></h3>
     <p>How to bring up an entire C2 infrastructure with all of your tooling and their corresponding redirectors within 5 minutes.</p>
     <a class="project-link" href="c2cloudflare.html">Check it out</a>
   </div>
@@ -37,10 +48,10 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <a class="plain-link" href="cftunnels.html"><img alt="cf" src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
+    <a class="plain-link" href="cftunnels.html"><img src="{{ "/assets/img/cloudflarelogo.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-left">
-    <h3 id="Cloudflare Tunnels"><a class="plain-link" href="cftunnels.html">Cloudflare Tunneling</a></h3>
+    <h3 id="Cloudflare Tunnelling"><a class="plain-link" href="cftunnels.html">Cloudflare Tunneling</a></h3>
     <p>Playing around with Cloudflare's tunnelling capabilites as well as checking out how it could be used for C2 infrastructure.</p>
     <a class="project-link" href="cftunnels.html">Check it out</a>
   </div>
@@ -62,7 +73,7 @@
     <a class="plain-link" href="sliverbof.html"><img alt="cme" src="{{ "/assets/img/sliver.jpg" | prepend: site.baseurl }}" /></a>
   </div>
   <div class="contents-left">
-    <h3 id="Sliver BOF"><a class="plain-link" href="sliverbof.html">Sliver Beacon Object File</a></h3>
+    <h3 id="Sliver Beacon Object File"><a class="plain-link" href="sliverbof.html">Sliver Beacon Object File</a></h3>
     <p>Adding a new Sliver BOF into the Sliver Armory and my experiences working with the Sliver C2 Framework.</p>
     <a class="project-link" href="sliverbof.html">Check it out</a>
   </div>
